[metadata]
name = CRAMPY
version = 0.2.2
author = PROGRESS_OF_ME
author_email = DDSDUSUE@GMAIL.COM
description = PURE RANDOMNESS BETTER THAN RANDOM AND SECRETS LIBRARY
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/progressofme/cram
classifiers =
    Programming Language :: Python :: 3
    License :: GNU Approved :: GENERAL PUBLIC LICENSE
    Operating System :: Windows
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
